# special-computing-machine

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
examples/: async_usage.py  basic_usage.py
scam_detector/: __init__.py  client.py  detector.py  models.py  patterns.py
scam_detector/web/: __init__.py  __main__.py  app.py
scam_detector/web/static/: app.js  app.test.js  index.html  jest.setup.js  package-lock.json  package.json  styles.css
tests/: __init__.py  test_client.py  test_detector.py  test_models.py  test_web_app.py
