[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scam-detector"
version = "0.1.0"
description = "AI-powered scam detection agent for forum posts"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scam_detector*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
